--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,24 @@
-sentence-transformers
-scikit-learn
-networkx
-python-louvain
-spacy
-nltk
-pypdf
+# Core Dependencies for SEMRAG System
+
+# PDF Processing
+pypdf>=4.0.0
+
+# NLP & Embeddings
+sentence-transformers>=2.2.0
+spacy>=3.7.0
+nltk>=3.8.0
+
+# Knowledge Graph & Network Analysis
+networkx>=3.0
+python-louvain>=0.16
+
+# Machine Learning & Similarity
+scikit-learn>=1.3.0
+numpy>=1.24.0
+
+# LLM Integration
+ollama>=0.1.0
+
+# Note: After installing run:
+# python -m spacy download en_core_web_sm
+# python -c "import nltk; nltk.download('punkt'); nltk.download('punkt_tab')"
